sm bugfix login, navbar collapsable in mobile

--- a/DiplomPdf/WebContent/stylesheet.css
+++ b/DiplomPdf/WebContent/stylesheet.css
@@ -13,11 +13,10 @@
 	
 }
 
-@media only screen and (max-width: 425px) {
    .row{
 	overflow:auto;
 	}
-}
+
 
 
 
